   > Tellurium Pickaxe ★
   > Tellurium Pickaxe ★★
   > Tellurium Pickaxe ★★★
   > Magical Ocarina
   > Battle Cry
   > Ethereal Flute
   > Adventurer's Guild Bronze Membership
   > Adventurer's Guild Silver Membership
   > Adventurer's Guild Gold Membership
   > Old Key
   > Andrew's Ancient Crystal of The Trail's Amazing History
   > [REDACTED HELMET]
   > [REDACTED TEAR]
   > [REDACTED WING]
 - Added 83 new equipment items:
  ~ 17 weapons:
   > Steel Knuckles
   > Shadowspec Sword
   > Shadowspec Warhammer
   > Unstoppable Force
   > Steel Greatsword
   > Draconic Wand
   > Void Crystal Staff
   > Knuckle Spikes
   > Life Crystal Staff
   > Mana Crystal Staff
   > Grass Knuckles
   > Frost Edge
   > Hero Sword Replica
   > Tellurium Wand
   > Tellurium Spellbook
   > Harmony
   > Bloodlust ★★
  ~ 8 bodygear:
   > True Shadowplate Armor
   > True Phantasmal Robes
   > True Prayer Vestments
   > True Shadowspec Leathers
   > Tellurium Heavy Armor
   > Tellurium Robes
   > Tellurium Vestments
   > Tellurium Leathers
  ~ 7 headgear:
   > Dapper-Looking Hat
   > Floppy Hat ★★
   > Silver Headband
   > Silver Mask
   > Bunny Hood
   > Dragon Scale Helmet
   > Sorrowful Headpiece
  ~ 7 footwear:
   > Speedster Boots
   > Hiking Boots ★★
   > Flower Boots
   > Padded Boots
   > Snow Boots
   > Trailblazing Boots
   > Trailblazing Boots ★
  ~ 7 shields:
   > Vishnu's Shield
   > Immovable Object
   > Turtle Shield
   > Tellurian Knight's Shield
   > Tellurian Knight's Bulwark
   > Vishnu's Aegis
   > Glacial Bulwark
  ~ 21 accessories:
   > Champion's Talisman
   > Soulstealer's Necklace
   > Vigilante's Charm
   > Storm Lens
   > Bat Sling
   > Giant Turtle Shell
   > Flytrap Fang
   > Flytrap Eye
   > Battle Plan
   > Forest Exploration Kit
   > Scaly Gloves
   > Dragonforce Gauntlets
   > Condensed Icy Gel
   > Warm Scarf
   > Warm Scarf ★
   > Snow Jacket
   > Snow Globe
   > Cloth Mask
   > Seshat's Charm
   > Seshat's Tome
   > Seshat's Opus
  ~ 9 magic equips: