@@ -4245,7 +4245,7 @@
       0,
       0
     ],
-    "price": 250
+    "price": 100
   },
   {
     "id": 161,
@@ -4266,16 +4266,16 @@
       0,
       0
     ],
-    "price": 1000
+    "price": 400
   },
   {
     "id": 162,
     "atypeId": 1,
-    "description": "The complete work of a god, holier than any\nmanmade text. Increases gained JP more than ever.",
+    "description": "Many lessons of Seshat have been written in the pages\nof this long read. Increases gained JP even more.",
     "etypeId": 6,
     "traits": [],
-    "iconIndex": 224,
-    "name": "Seshat's Opus",
+    "iconIndex": 225,
+    "name": "Seshat's Teachings",
     "note": "<JP Rate: 725%>\n<Upgrade Slots: 3>\n\n<Synthesis Ingredients>\nSeshat's Tome: 4\n</Synthesis Ingredients>\n<Mask Name: JP Increaser Tier 3>",
     "params": [
       0,
@@ -4287,7 +4287,7 @@
       0,
       0
     ],
-    "price": 4000
+    "price": 1600
   },
   {
     "id": 163,
@@ -4506,5 +4506,26 @@
       0
     ],
     "price": 1000
+  },
+  {
+    "id": 171,
+    "atypeId": 1,
+    "description": "The complete work of a god, holier than any\nmanmade text. Increases gained JP to the max.",
+    "etypeId": 6,
+    "traits": [],
+    "iconIndex": 224,
+    "name": "Seshat's Opus",
+    "note": "<JP Rate: 3225%>\n<Upgrade Slots: 4>\n\n<Synthesis Ingredients>\nSeshat's Teachings: 4\n</Synthesis Ingredients>\n<Mask Name: JP Increaser Tier 4>",
+    "params": [
+      0,
+      0,
+      0,
+      0,
+      0,
+      0,
+      0,
+      0
+    ],
+    "price": 6400
   }
 ]
