@@ -1695,7 +1695,7 @@
     "iconIndex": 236,
     "itypeId": 3,
     "name": "CASTLE FORGE RECIPES",
-    "note": "Was once the Pot with Seed.\n<Item Recipe: 68, 74, 213, 176, 214, 92, 218, 228, 93, 154, 207, 123, 124, 125, 184, 208, 209, 210>\n<Weapon Recipe: 45, 49, 54, 50, 44, 42, 43, 53, 52, 32, 51, 23, 30, 24, 25, 26, 21, 22, 27>\n<Armor Recipe: 97, 82, 141, 47, 108, 137, 136, 117, 48, 151, 150, 78, 125, 36, 126, 37, 127, 128, 168, 46, 133, 132, 129, 130, 131, 44, 113, 115, 81, 83, 107, 149, 148, 45, 170, 143, 142, 96, 159, 134, 161, 162, 32, 57, 164, 124>",
+    "note": "Was once the Pot with Seed.\n<Item Recipe: 68, 74, 213, 176, 214, 92, 218, 228, 93, 154, 207, 123, 124, 125, 184, 208, 209, 210>\n<Weapon Recipe: 45, 49, 54, 50, 44, 42, 43, 53, 52, 32, 51, 23, 30, 24, 25, 26, 21, 22, 27>\n<Armor Recipe: 97, 82, 141, 47, 108, 137, 136, 117, 48, 151, 150, 78, 125, 36, 126, 37, 127, 128, 168, 46, 133, 132, 129, 130, 131, 44, 113, 115, 81, 83, 107, 149, 148, 45, 170, 143, 142, 96, 159, 134, 161, 162, 171, 32, 57, 164, 124>",
     "occasion": 3,
     "price": 0,
     "repeats": 1,
