@@ -146,7 +146,7 @@ Additions:
    > [REDACTED HELMET]
    > [REDACTED TEAR]
    > [REDACTED WING]
- - Added 83 new equipment items:
+ - Added 84 new equipment items:
   ~ 17 weapons:
    > Steel Knuckles
    > Shadowspec Sword
@@ -198,7 +198,7 @@ Additions:
    > Tellurian Knight's Bulwark
    > Vishnu's Aegis
    > Glacial Bulwark
-  ~ 21 accessories:
+  ~ 22 accessories:
    > Champion's Talisman
    > Soulstealer's Necklace
    > Vigilante's Charm
@@ -219,6 +219,7 @@ Additions:
    > Cloth Mask
    > Seshat's Charm
    > Seshat's Tome
+   > Seshat's Teachings
    > Seshat's Opus
   ~ 9 magic equips:
    > Comet Charm
